Fix overflow bug

--- a/packages/insomnia-app/app/ui/css/components/sidebar.less
+++ b/packages/insomnia-app/app/ui/css/components/sidebar.less
@@ -190,6 +190,7 @@
     &.sidebar__list--pinned {
       padding-bottom: 0px;
       padding-top: 0px;
+      border-bottom: 2px solid rgba(255, 255, 255, 0.03);
 
       &::-webkit-scrollbar {
         display: block;
@@ -292,7 +293,7 @@
     align-items: center;
     height: 100%;
 
-    & > *:last-child {
+    & > .editable {
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
